crates/aranya-policy-compiler/tests/data/type_errors/bad_builtin_arg_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: string
  |
2 |     return saturating_add(x, "foo")
  |                              ^^^^^ expected `int` but found `string`
